--- a/spacedu/projeto02-site-educacao/aula04/style.css
+++ b/spacedu/projeto02-site-educacao/aula04/style.css
@@ -2,6 +2,10 @@
   background-color: #fdc800 !important;
 }
 
+.bg-secondary {
+  background-color: #002147 !important;
+}
+
 .btn-primary {
   background-color: #fdc800;
   border: 1px solid #fdc800;
@@ -10,6 +14,10 @@
 
 .bg-light {
   background-color: #f0f4f9 !important;
+}
+
+.bg-half-light {
+  background: linear-gradient(0deg, white 50%, #f0f4f9 50%);
 }
 
 .btn-primary:hover {
