bootstrap 5 - secao 8: projeto 02 site de educacao - secao proximo curso parte 2

--- a/spacedu/projeto02-site-educacao/aula04/style.css
+++ b/spacedu/projeto02-site-educacao/aula04/style.css
@@ -35,3 +35,16 @@
   border: 1px solid #002147;
   background-color: white;
 }
+
+.text-primary {
+  color: #fdc800 !important;  
+}
+
+.text-large {
+  font-size: 40px;
+  font-weight: bolder;
+}
+
+.text-small {
+  font-size: 10px;
+}
