--- a/spacedu/projeto02-site-educacao/aula04/style.css
+++ b/spacedu/projeto02-site-educacao/aula04/style.css
@@ -82,3 +82,13 @@
 }
 
 
+.text-info {
+  color: #00b2b2;
+}
+
+.bg-map {
+  background-image: url("img/map.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
