html5-css3-inicio - classes e ids

--- a/html5-css3-inicio/css/styles.css
+++ b/html5-css3-inicio/css/styles.css
@@ -13,3 +13,12 @@ h2 {
 }
 
 /* este é um comentario */
+
+.p-texto {
+    color: lightgray;
+}
+
+#titulo-app {
+    color: purple;
+    font-size: 40px;
+}
