html5-css3-inicio - adicionando fontes ao css

--- a/html5-css3-inicio/css/styles.css
+++ b/html5-css3-inicio/css/styles.css
@@ -64,3 +64,22 @@ h1 {
     background-color: #000000;
     color: azure;
 }
+
+/* fontes */
+
+.family {
+    color: #000;
+
+}
+
+.serif {
+    font-family: "Times new roman";
+}
+
+.sans-serif {
+    font-family: arial;
+}
+
+.monospace {
+    font-family: "Courier new";
+}
