html5-css3-inicio - box model na pratica padding

--- a/html5-css3-inicio/css/styles.css
+++ b/html5-css3-inicio/css/styles.css
@@ -100,11 +100,20 @@ body {
     width: 200px;
     height: 200px;
     background-color: red;
+    /* geral */
     /* padding: 20px; */
+    /* especifico
     padding-top: 30px;
     padding-left: 10px;
     padding-right: 20px;
     padding-bottom: 5px;
+    */
+    /* especifico agrupago */
+    padding: 30px 20px 5px 10px;
+    /* especifico agrupado 3 medidas - top, right, left e bottom */
+    padding: 30px 20px 5px;
+    /* especifico agrupado 2 medidas - top-bottom, right-left*/
+    padding: 30px 20px;
 }
 
 .paragrafo-box {
