--- a/html5-css3-inicio/css/styles.css
+++ b/html5-css3-inicio/css/styles.css
@@ -109,11 +109,15 @@ body {
     padding-bottom: 5px;
     */
     /* especifico agrupago */
-    padding: 30px 20px 5px 10px;
+    /* padding: 30px 20px 5px 10px; */
     /* especifico agrupado 3 medidas - top, right, left e bottom */
-    padding: 30px 20px 5px;
+    /* padding: 30px 20px 5px; */
     /* especifico agrupado 2 medidas - top-bottom, right-left*/
     padding: 30px 20px;
+    border: 3px dotted blue;
+    border-width: 5px 10px 2px 10px;
+    border-width: 20px 10px;
+    border-radius: 15px;
 }
 
 .paragrafo-box {
