--- a/html5-css3-inicio/css/styles.css
+++ b/html5-css3-inicio/css/styles.css
@@ -114,10 +114,13 @@ body {
     /* padding: 30px 20px 5px; */
     /* especifico agrupado 2 medidas - top-bottom, right-left*/
     padding: 30px 20px;
-    border: 3px dotted blue;
+    border: 3px solid blue;
     border-width: 5px 10px 2px 10px;
     border-width: 20px 10px;
     border-radius: 15px;
+    margin: 50px;
+    margin: 5px 10px 10px 7px;
+    margin: 100px;
 }
 
 .paragrafo-box {
