--- a/html5-css3-inicio/css/styles.css
+++ b/html5-css3-inicio/css/styles.css
@@ -129,3 +129,16 @@ body {
     color: #000;
     margin: 0;
 }
+
+/* positions - static , relative, fixed, absolute e sti */
+
+.div-position {
+    width: 500px;
+    height: 500px;
+    background-color: red;
+    border-bottom: 2px dotted black;
+}
+
+.static {
+    position: static;
+}
