html5-css3-inicio - entendendo positions sticky

--- a/html5-css3-inicio/css/styles.css
+++ b/html5-css3-inicio/css/styles.css
@@ -130,7 +130,7 @@ body {
     margin: 0;
 }
 
-/* positions - static , relative, fixed, absolute e sti */
+/* positions - static , relative, fixed, absolute e sticky */
 
 .div-position {
     width: 500px;
