html5-css3-inicio - conhecendo o float

--- a/html5-css3-inicio/css/styles.css
+++ b/html5-css3-inicio/css/styles.css
@@ -189,9 +189,18 @@ body {
     padding: 50px;
 }
 
+.div-float {
+    overflow: auto;
+}
+
 .img-float {
     width: 200px;
     height: 200px;
+    float: left;
+}
+
+.float-right {
+    float: right;
 }
 
 .p-float {
