html5-css3-inicio - finalizando o projeto tributo

--- a/html5-css3-inicio/projeto-tributo/css/styles.css
+++ b/html5-css3-inicio/projeto-tributo/css/styles.css
@@ -20,6 +20,7 @@ html {
 /* cabecalho */
 
 .cabecalho {
+    text-align: center;
     font-size: 40px;
 }
 
@@ -29,4 +30,49 @@ html {
 
 .paragrafo-principal {
     font-style: italic;
+}
+
+/* corpo do site */
+
+.img-destaque {
+    text-align: center;
+    margin-top: 30px;
+}
+
+/* biografia */
+
+.biografia-container {
+    padding: 25px 0;
+    padding: 25px 0;
+    border-top: 1px dashed #DDD;
+    border-bottom: 1px dashed #DDD;
+}
+
+/* citacoes */
+.frase-container {
+    background-color: #DDD;
+    padding: 30px;
+}
+
+.frase-container blockquote {
+    font-weight: 600;
+    font-size: 30px;
+}
+
+
+.frase-container p {
+    font-style: italic;
+}
+
+/* curiosidades */
+
+.curiosidades-container {
+    padding: 25px 0;
+    margin: 25px 0;
+    border-top: 1px dashed #DDD;
+    border-bottom: 1px dashed #DDD;
+}
+
+.curiosidades-container li {
+    height: 30px;
 }
