html5-css3-inicio - projeto agencia - css da secao de servicos

--- a/html5-css3-inicio/projeto-agencia/css/styles.css
+++ b/html5-css3-inicio/projeto-agencia/css/styles.css
@@ -1,3 +1,4 @@
+/* general */
 html {
     font-family: Helvetica, sans-serif;
 }
@@ -8,6 +9,7 @@ html {
     height: 600px;
     background-image: url('../img/capa2.jpg');
     background-position: center;
+    position: relative;
 }
 
 .box-container {
