--- a/html5-css3-avancado/css3/styles.css
+++ b/html5-css3-avancado/css3/styles.css
@@ -10,10 +10,40 @@
     }
 }
 
+@keyframes animacao2 {
+    0% {}
+
+    30% {
+        width: 100px;
+    }
+
+    60% {
+        background-color: red;
+    }
+
+    80% {
+        left: 100px;
+        background-color: blue;
+    }
+
+    100% {
+        height: 100px;
+    }
+}
+
 .animation-div {
     width: 100px;
     height: 100px;
     background-color: red;
     animation-name: animacao;
     animation-duration: 5s;
+}
+
+.animation-div2 {
+    width: 200px;
+    height: 200px;
+    background-color: black;
+    animation-name: animacao2;
+    animation-duration: 6s;
+    position: relative;
 }
