--- a/html5-css3-avancado/css3/styles.css
+++ b/html5-css3-avancado/css3/styles.css
@@ -248,3 +248,13 @@
 .gradient8 {
     background-image: radial-gradient(circle, #323042 10%, #DB9047 30%, #FF7848)
 }
+
+
+@font-face {
+    font-family: "Lage Grafica";
+    src: url(fonts/lage_grafica.ttf);
+}
+
+.fontface {
+    font-family: "Lage Grafica";
+}
