--- a/html5-css3-avancado/projeto-doceria/css/styles.css
+++ b/html5-css3-avancado/projeto-doceria/css/styles.css
@@ -56,3 +56,54 @@ a {
     margin-left: auto;
     margin-right: auto;
 }
+
+.content {
+    position: absolute;
+    left: 300px;
+    width: calc(100% - 300px);
+}
+
+
+.content h1,
+.content h2 {
+    color: #006599;
+    margin-bottom: 30px;
+}
+
+.content h1 {
+    font-size: 48px;
+}
+
+.content h2 {
+    font-size: 35px;
+}
+
+section {
+    padding-left: 50px;
+}
+
+#sessao-bemvindo {
+    padding-left: 0;
+
+}
+
+.sessao-bemvindo-content {
+    padding-left: 50px;
+}
+
+#sessao-bemvindo .banner {
+    height: 500px;
+    background-image: url('../img/banner2.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+#sessao-bemvindo h1 {
+    margin-top: 70px;
+}
+
+#sessao-bemvindo::after {
+    content: "";
+    display: block;
+    clear: both;
+}
