--- a/html5-css3-avancado/projeto-doceria/css/styles.css
+++ b/html5-css3-avancado/projeto-doceria/css/styles.css
@@ -253,3 +253,19 @@ form input[type=submit]:hover {
     background-image: url('../img/galeria12.jpg');
     margin-right: 0;
 }
+
+#form-contato {
+    width: 500px;
+}
+
+#form-contato input[type=text],
+#form-contato input[type=email],
+#form-contato textarea {
+    display: block;
+    border: 1px solid #006599;
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+    font-size: 16px;
+    font-family: 'Open sans', sans-serif;
+}
