--- a/html5-css3-avancado/flexbox/styles.css
+++ b/html5-css3-avancado/flexbox/styles.css
@@ -11,10 +11,12 @@ body {
 .box {
     width: 100px;
     height: 100px;
+    flex-grow: 1;
 }
 
 .first {
     background-color: red;
+    flex-grow: 2;
 }
 
 .second {
