--- a/html5-css3-avancado/flexbox/styles.css
+++ b/html5-css3-avancado/flexbox/styles.css
@@ -10,21 +10,19 @@ body {
 
 .box {
     height: 100px;
-    flex-grow: 1;
-    flex-basis: 500px;
+    flex: 1 1 300px;
 }
 
 .first {
     background-color: red;
+    flex: 2 1 300px;
     order: 3;
 }
 
 .second {
     background-color: green;
-    order: 1;
 }
 
 .third {
     background-color: blue;
-    order: 2;
 }
