--- a/html5-css3-avancado/flexbox/styles.css
+++ b/html5-css3-avancado/flexbox/styles.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     width: 100%;
     background-color: white;
-    justify-content: flex-end;
+    justify-content: space-around;
 }
 
 .box {
