modulo de flexbox - revisao flexbox

--- a/html5-css3-avancado/flexbox/styles.css
+++ b/html5-css3-avancado/flexbox/styles.css
@@ -7,7 +7,7 @@
     flex-direction - muda a direção que os elementos estão (row, column)
     flex-order - muda a ordem do elemento individualmente
     justify-content - alinha os elementos no eixo principal
-    align-items - alinha os elementos no eixo sexundario
+    align-items - alinha os elementos no eixo secundario
     align-self - alinha o elemento em particular 
 */
 
