--- a/html5-css3-avancado/projeto-hdchost/style.css
+++ b/html5-css3-avancado/projeto-hdchost/style.css
@@ -96,3 +96,67 @@ nav {
 .main-banner p {
     font-size: 32px;
 }
+
+/* especialidades */
+
+.specialties-container {
+    padding: 5em 0;
+}
+
+.specialties-container ul {
+    display: flex;
+    width: 90%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0;
+}
+
+.specialties-container ul li {
+    flex: 1 1 200px;
+    list-style: none;
+    text-align: center;
+    padding: 20px;
+}
+
+.fas {
+    font-size: 60px;
+    margin-bottom: 15px;
+}
+
+.fa-shield-alt {
+    color: #2CC76A;
+}
+
+.fa-rocket {
+    color: #EF3F29;
+}
+
+.fa-comments {
+    color: #EF8F29;
+}
+
+.specialties-container ul li h3 {
+    margin-bottom: 25px;
+    color: #333;
+}
+
+.specialties-container ul li p {
+    line-height: 24px;
+}
+
+/* precos */
+
+.pricing-container {
+    padding-bottom: 5em;
+    text-align: center;
+}
+
+.pricing-container h1 {
+    font-size: 36px;
+    margin-top: 0;
+}
+
+.pricing-container p {
+    font-size: 20px;
+}
