--- a/html5-css3-avancado/projeto-hdchost/style.css
+++ b/html5-css3-avancado/projeto-hdchost/style.css
@@ -327,3 +327,49 @@ footer {
     font-weight: bold;
     margin-bottom: 50px;
 }
+
+@media screen and (max-width: 1100px) {
+
+    .plans-container,
+    .searchdomain-container ul {
+        flex-wrap: wrap;
+    }
+
+}
+
+@media screen and (max-width: 576px) {
+
+    html,
+    body {
+        overflow-x: hidden;
+    }
+
+    .navbar-items li {
+        font-size: 12px;
+        margin-left: 10px;
+    }
+
+    .plan {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .searchdomain-container {
+        padding: 3em 2em;
+    }
+
+    .container,
+    .searchdomain-container input {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .contact-container input,
+    .contact-container textarea {
+        width: 100%;
+        display: block;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+}
