--- a/html5-css3-avancado/projeto-whatsapp/styles.css
+++ b/html5-css3-avancado/projeto-whatsapp/styles.css
@@ -220,3 +220,14 @@ ul {
     text-align: center;
     float: right;
 }
+
+/* chat */
+
+.chat-container {
+    position: absolute;
+    top: 0;
+    left: 410px;
+    width: calc(100% - 410px);
+    height: 100%;
+    background-color: #CCC;
+}
