--- a/html5-css3-avancado/projeto-google/css/styles.css
+++ b/html5-css3-avancado/projeto-google/css/styles.css
@@ -1,3 +1,11 @@
-h1 {
-    color: red;
+/* geral */
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+}
+
+a,
+a:visited {
+    color: #1A0DAB;
 }
