--- a/html5-css3-avancado/projeto-google/css/styles.css
+++ b/html5-css3-avancado/projeto-google/css/styles.css
@@ -277,7 +277,7 @@ aside {
     margin-right: 5px;
 }
 
-/* infors aside */
+/* infos aside */
 
 #about-box {
     border-bottom: 1px solid #EBEBEB;
