--- a/html5-css3-avancado/projeto-intagram/css/styles.css
+++ b/html5-css3-avancado/projeto-intagram/css/styles.css
@@ -7,3 +7,29 @@
     font-family: Helvetica;
     background: #FAFAFA;
 }
+
+/* containers */
+
+#main-container {
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+}
+
+#banner-container,
+#form-container {
+    flex: 1 1 0;
+    width: 50%;
+}
+
+#banner-container {
+    text-align: right;
+}
+
+#banner-container img {
+    margin-right: -15px;
+}
+
+#form-container {
+    text-align: center;
+}
