--- a/html5-css3-avancado/projeto-intagram/css/styles.css
+++ b/html5-css3-avancado/projeto-intagram/css/styles.css
@@ -33,3 +33,47 @@
 #form-container {
     text-align: center;
 }
+
+/* login form */
+
+#form-box {
+    background-color: #FFF;
+    border: 1px solid #DBDBDB;
+    width: 350px;
+    margin-top: 30px;
+}
+
+#form-box #logo-insta {
+    width: 175px;
+    height: 51px;
+    margin: 30px auto 12px;
+    background: #FFF;
+}
+
+#login-form {
+    margin-top: 20px;
+}
+
+#login-form input {
+    display: block;
+    font-size: 12px;
+    padding: 12px 9px;
+    background-color: #FAFAFA;
+    border: 1px solid #DBDBDB;
+    border-radius: 3px;
+    width: 268px;
+    margin: 5px auto;
+}
+
+#login-form input[type="submit"] {
+    background-color: #B2DFFC;
+    color: #FFF;
+    margin-top: 15px;
+    border-radius: 5px;
+    height: 30px;
+    border-color: #B2DFFC;
+    font-size: 13px;
+    padding: 0;
+    font-weight: bold;
+    cursor: pointer;
+}
