--- a/html5-css3-avancado/projeto-intagram/css/styles.css
+++ b/html5-css3-avancado/projeto-intagram/css/styles.css
@@ -36,7 +36,8 @@
 
 /* login form */
 
-#form-box {
+#form-box,
+#register-container {
     background-color: #FFF;
     border: 1px solid #DBDBDB;
     width: 350px;
@@ -131,4 +132,23 @@
 #forgot-pass a {
     text-decoration: none;
     color: #373799;
+}
+
+
+/* chamada cadastro */
+
+#register-container {
+    margin-top: 10px;
+    padding: 25px;
+}
+
+#register-container p {
+    font-size: 14px;
+    color: #262626;
+}
+
+#register-container a {
+    color: #4A95F6;
+    font-weight: bold;
+    text-decoration: none;
 }
