projeto instagram - corrige css da sessao facebook

--- a/html5-css3-avancado/projeto-intagram/css/styles.css
+++ b/html5-css3-avancado/projeto-intagram/css/styles.css
@@ -118,9 +118,9 @@
 }
 
 #facebook-login img {
-    font-weight: bold;
-    font-size: 13px;
-    margin-top: 1px;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
 }
 
 /* esqueceu a senha */
