projeto instagram - css sessao obter app

--- a/html5-css3-avancado/projeto-intagram/css/styles.css
+++ b/html5-css3-avancado/projeto-intagram/css/styles.css
@@ -152,3 +152,24 @@
     font-weight: bold;
     text-decoration: none;
 }
+
+/* obter o app */
+
+#get-app-container {
+    text-align: center;
+    width: 350px;
+}
+
+#get-app-center {
+    margin: 20px 0;
+    font-size: 13px;
+}
+
+#get-app-container a {
+    text-decoration: none;
+}
+
+#get-app-container img {
+    width: 136px;
+    height: 40px;
+}
