--- a/html5-css3-avancado/projeto-intagram/css/styles.css
+++ b/html5-css3-avancado/projeto-intagram/css/styles.css
@@ -205,3 +205,18 @@ footer #footer-links li {
     color: #8E8E8E;
     margin-top: 10px;
 }
+
+/* mobile */
+
+@media(max-width: 450px) {
+
+    #banner-container {
+        display: none;
+    }
+
+    #main-container,
+    #form-box {
+        margin-top: 0;
+    }
+
+}
