--- a/html5-css3-avancado/projeto-landing-page/css/styles.css
+++ b/html5-css3-avancado/projeto-landing-page/css/styles.css
@@ -5,3 +5,10 @@
     --text-secondary: #000;
     --text-tertiary: #5d5d5d;
 }
+
+* {
+    font-family: "Montserrat";
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
