projeto media-query - modos de media queries

--- a/html5-css3-avancado/projeto-media-query/css/styles.css
+++ b/html5-css3-avancado/projeto-media-query/css/styles.css
@@ -13,3 +13,13 @@ h1 {
     }
 
 }
+
+/* outros modos */
+/* scren, print, speech, all */
+@media print and (max-width: 600px) {
+
+    h1 {
+        color: green;
+    }
+
+}
