--- a/hora-de-codar/3_layout/1_aula/css/styles.css
+++ b/hora-de-codar/3_layout/1_aula/css/styles.css
@@ -1,7 +1,37 @@
+/* xs */
+
 h1 {
     color: red;
 }
 
 .btn-primary {
     background-color: red;
+}
+
+/* sm */
+@media (min-width: 576px) {
+    h1 {
+        color: blue;
+    }
+}
+
+/* md */
+@media (min-width: 768px) {
+    h1 {
+        color: green;
+    }
+}
+
+/* lg */
+@media (min-width: 992px) {
+    h1 {
+        color: purple;
+    }
+}
+
+/* xl */
+@media (min-width: 1200px) {
+    h1 {
+        color: yellow;
+    }
 }
