bootstrap 5 - container fluid

--- a/hora-de-codar/3_layout/1_aula/css/styles.css
+++ b/hora-de-codar/3_layout/1_aula/css/styles.css
@@ -35,3 +35,11 @@ h1 {
         color: yellow;
     }
 }
+
+.container {
+    background-color: #999;
+}
+
+.container-fluid {
+    background-color: #888;
+}
