--- a/hora-de-codar/3_layout/1_aula/css/styles.css
+++ b/hora-de-codar/3_layout/1_aula/css/styles.css
@@ -59,3 +59,23 @@ h1 {
     margin-bottom: 30px;
     border: 2px solid chocolate;
 }
+
+/* grid */
+.container {
+    border: 5px dotted blue;
+    padding: 10px;
+    margin-bottom: 300px;
+}
+
+.row {
+    border: 5px solid purple;
+    height: 100px;
+    padding: 10px;
+    margin: 0;
+}
+
+.col {
+    border: 2px solid red;
+    height: 100%;
+    margin: 0;
+}
