bootstrap 5 - tamanho das colunas

--- a/hora-de-codar/3_layout/1_aula/css/styles.css
+++ b/hora-de-codar/3_layout/1_aula/css/styles.css
@@ -74,8 +74,16 @@ h1 {
     margin: 0;
 }
 
-.col {
-    border: 2px solid red;
+.col,
+.col-4,
+.col-2,
+.col-11,
+.col-1 {
+    border: 2px dotted red;
     height: 100%;
     margin: 0;
+}
+
+#largura-limitada {
+    max-width: 500px;
 }
