--- a/hora-de-codar/3_layout/1_aula/css/styles.css
+++ b/hora-de-codar/3_layout/1_aula/css/styles.css
@@ -78,7 +78,8 @@ h1 {
 .col-4,
 .col-2,
 .col-11,
-.col-1 {
+.col-1,
+.col-6 {
     border: 2px dotted red;
     height: 100%;
     margin: 0;
@@ -86,4 +87,18 @@ h1 {
 
 #largura-limitada {
     max-width: 500px;
+}
+
+/* alinhamento vertical */
+.vertical {
+    height: 250px;
+    border-color: coral;
+}
+
+.vertical .row {
+    height: 100%;
+}
+
+.col-6 {
+    height: 50px;
 }
