bootstrap 5 - alinhamento horizontal

--- a/hora-de-codar/3_layout/1_aula/css/styles.css
+++ b/hora-de-codar/3_layout/1_aula/css/styles.css
@@ -79,7 +79,8 @@ h1 {
 .col-2,
 .col-11,
 .col-1,
-.col-6 {
+.col-6,
+.col-3 {
     border: 2px dotted red;
     height: 100%;
     margin: 0;
@@ -99,6 +100,7 @@ h1 {
     height: 100%;
 }
 
-.col-6 {
+.col-6,
+.col-3 {
     height: 50px;
 }
