--- a/hora-de-codar/3_layout/1_aula/css/styles.css
+++ b/hora-de-codar/3_layout/1_aula/css/styles.css
@@ -105,3 +105,12 @@ h1 {
 .vertical .col-4 {
     height: 50px;
 }
+
+#offset {
+    height: auto;
+}
+
+#offset .col-md-3 {
+    height: 50px;
+    border: 2px solid red;
+}
