bootstrap 5 - projeto art - finalizando o header

--- a/hora-de-codar/5_art/css/styles.css
+++ b/hora-de-codar/5_art/css/styles.css
@@ -31,6 +31,8 @@ i {
     color: #FFF;
 }
 
+/* header */
+
 #header {
     text-align: center;
     padding: 20px;
@@ -50,6 +52,8 @@ i {
     width: 40px;
     margin-right: 15px;
 }
+
+/* navbar */
 
 #navbar {
     padding: 10px;
