--- a/hora-de-codar/5_art/css/styles.css
+++ b/hora-de-codar/5_art/css/styles.css
@@ -68,3 +68,20 @@ i {
 #navbar a:hover {
     color: #C1B696;
 }
+
+/* main image */
+
+.main-image {
+    height: 400px;
+    background-image: url('../img/g_1.jpg');
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.main-image-info {
+    background-color: #FFF;
+    padding: 25px;
+    position: absolute;
+    left: 25px;
+    bottom: 25px;
+}
