bootstrap 5 - modulo projeto exact time - css da navbar inferior

--- a/hora-de-codar/10_exacttime/css/styles.css
+++ b/hora-de-codar/10_exacttime/css/styles.css
@@ -127,3 +127,13 @@ body {
 #search-form input::placeholder {
     color: #fff;
 }
+
+/* bottom navbar */
+#bottom-navbar-container .container {
+    justify-content: flex-end;
+}
+
+#bottom-navbar-container a {
+    font-weight: 600;
+    color: #fff;
+}
