bootstrap 5 - modulo projeto exact time - estilizando o slider

--- a/hora-de-codar/10_exacttime/css/styles.css
+++ b/hora-de-codar/10_exacttime/css/styles.css
@@ -137,3 +137,28 @@ body {
     font-weight: 600;
     color: #fff;
 }
+
+/* banners */
+#banners-container {
+    padding: 0;
+}
+
+.carousel-caption {
+    bottom: 5em;
+    padding: 1em;
+    left: 12%;
+    right: 12%;
+}
+
+.carousel-caption h5 {
+    font-size: 1.8em;
+}
+
+@media (min-width: 758px) {
+    #slider .carousel-item {
+        height: 600px;
+    }
+
+
+
+}
