bootstrap 5 - modulo projeto exact time - css do banner

--- a/hora-de-codar/10_exacttime/css/styles.css
+++ b/hora-de-codar/10_exacttime/css/styles.css
@@ -288,3 +288,28 @@ body {
     background-color: #c09578;
     border-color: #c09578;
 }
+
+/* bottom banner */
+
+#bottom-banner {
+    background-color: #101010;
+    padding: 6em;
+    margin-bottom: 4em;
+    text-align: center;
+}
+
+#bottom-banner .offer-subtitle,
+#bottom-banner h2 {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+#bottom-banner .btn {
+    margin: 2em;
+    font-weight: bold;
+    padding: 1em;
+}
+
+#bottom-banner img {
+    max-width: 175px;
+}
