--- a/hora-de-codar/10_exacttime/css/styles.css
+++ b/hora-de-codar/10_exacttime/css/styles.css
@@ -313,3 +313,33 @@ body {
 #bottom-banner img {
     max-width: 175px;
 }
+
+/* novos produtos */
+#new-products {
+    margin-bottom: 5em;
+}
+
+#new-products-banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #101010;
+}
+
+#new-products-banner h3 {
+    text-transform: uppercase;
+    font-weight: 1em;
+    margin-bottom: 1em;
+    font-size: 2.5em;
+}
+
+#new-products .col-md-4 {
+    padding: 0;
+}
+
+#new-products .card img {
+    height: 150px;
+    width: 90px;
+    margin: 2em auto;
+}
