--- a/hora-de-codar/10_exacttime/css/styles.css
+++ b/hora-de-codar/10_exacttime/css/styles.css
@@ -382,3 +382,27 @@ body {
 #insta6 {
     background-image: url('../img/insta6.jpg');
 }
+
+/* footer */
+#footer-links-container {
+    border-bottom: 1px solid #626262;
+}
+
+#footer .footer-column {
+    padding: 2em;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    #footer .footer-column {
+        padding: 5em 2em;
+    }
+}
+
+#footer-links-container h3 {
+    margin-bottom: 25px;
+    text-transform: uppercase;
+}
