--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -3,5 +3,13 @@ h1 {
 }
 
 p {
-    color: green;
+    color: blue;
 }
+
+h2 {
+    color: green;
+    text-align: center;
+    font-size: 50px;
+}
+
+/* este é um comentario */
