bootstrap 5 - modulo fundamentos css - classes e ids

--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -21,3 +21,12 @@ h2 {
     comentario 
     em varias linhas
 */
+
+.p-texto {
+    color: lightgreen;
+}
+
+#titulo-app {
+    color: purple;
+    font-size: 40px;
+}
