bootstrap 5 - modulo fundamentos css - especificidade

--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -30,3 +30,16 @@ h2 {
     color: purple;
     font-size: 40px;
 }
+
+/* especificdade */
+div p {
+    color: red;
+}
+
+.p-dentro-da-div {
+    color: blue;
+}
+
+#p-super-especifico {
+    color: green;
+}
