bootstrap 5 - modulo fundamentos css - maneiras de adicionar cor

--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -43,3 +43,16 @@ div p {
 #p-super-especifico {
     color: green;
 }
+
+/* cores */
+.nome {
+    color: orange;
+}
+
+.hexa {
+    color: #6a40c4;
+}
+
+.rgba {
+    color: rgba(17, 197, 214, 1);
+}
