--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -130,6 +130,12 @@ body {
     padding: 30px 20px 5px */
     /* especifico agrupado 2 medidas - top-bottom, right-left
     padding: 30px 20px */
+    border: 3px dashed blue;
+    border-width: 5px 10px 2px 10px;
+    /* border-left: 5px dotted blue;
+    border-right-style: double; */
+    border-width: 20px 10px;
+    border-radius: 15px;
 }
 
 .paragrafo-box {
