--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -138,7 +138,8 @@ body {
     border-radius: 15px;
     margin: 50px;
     /*margin: 5px 10px 10px 7px; */
-    margin: 20px 10px;
+    margin: 100px;
+    display: inline-block;
 }
 
 .paragrafo-box {
