--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -150,3 +150,20 @@ body {
     color: #000;
     margin: 0;
 }
+
+/* positions */
+/* static */
+/* relative */
+/* fixed */
+/* absolute */
+/* sticky */
+
+.div-position {
+    width: 500px;
+    height: 500px;
+    background-color: red;
+}
+
+.static {
+    position: static;
+}
