--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -175,3 +175,18 @@ body {
     top: 100px;
     left: 50px;
 }
+
+.absolute {
+    position: absolute;
+    background-color: purple;
+    right: 0;
+    top: 0;
+
+}
+
+.mini-div {
+    height: 50px;
+    width: 50px;
+    top: 50px;
+    left: 100px;
+}
