bootstrap 5 - modulo fundamentos css - position fixed

--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -190,3 +190,11 @@ body {
     top: 50px;
     left: 100px;
 }
+
+.fixed {
+    position: fixed;
+    height: 200px;
+    background-color: yellow;
+    bottom: 0;
+    right: 0;
+}
