bootstrap 5 - modulo fundamentos css - definindo position static

--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -152,7 +152,7 @@ body {
 }
 
 /* positions */
-/* static */
+/* static - flow no html, nao é alterada por top, left, right e bottom */
 /* relative */
 /* fixed */
 /* absolute */
