--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -153,7 +153,7 @@ body {
 
 /* positions */
 /* static - flow no html, nao é alterada por top, left, right e bottom */
-/* relative */
+/* relative - flow no html, ela é alterada pelo top, left , right r bottom  */
 /* fixed */
 /* absolute */
 /* sticky */
