bootstrap 5 - modulo fundamentos css - definindo position fiied

--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -154,7 +154,7 @@ body {
 /* positions */
 /* static - flow no html, nao é alterada por top, left, right e bottom */
 /* relative - flow no html, ela é alterada pelo top, left , right r bottom  */
-/* fixed */
+/* fixed - posiciona em qualquer lugar da tela, e é posicionada em relacao em html */
 /* absolute */
 /* sticky */
 
