--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -155,7 +155,7 @@ body {
 /* static - flow no html, nao é alterada por top, left, right e bottom */
 /* relative - flow no html, ela é alterada pelo top, left , right r bottom  */
 /* fixed - posiciona em qualquer lugar da tela, e é posicionada em relacao em html */
-/* absolute */
+/* absolute - posiciona em qualquer lugar, e ela respeita o elemento antecessor */
 /* sticky */
 
 .div-position {
