--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -245,3 +245,21 @@ body {
     width: 500px;
     height: 50px;
 }
+
+.pai-porcentagem {
+    height: 500px;
+    width: 500px;
+    background-color: #000;
+}
+
+.porcentagem-1 {
+    width: 50%;
+    height: 50%;
+    background-color: yellow;
+}
+
+.porcentagem-2 {
+    width: 50%;
+    height: 50%;
+    background-color: #000;
+}
