bootstrap 5 - modulo fundamentos css - unidade de medida em

--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -263,3 +263,13 @@ body {
     height: 50%;
     background-color: #000;
 }
+
+.pai-em {
+    font-size: 50px;
+}
+
+.em-1 {
+    width: 2em;
+    height: 2em;
+    background-color: purple;
+}
