bootstrap 5 - modulo fundamentos css - unidade de medida rem

--- a/hora-de-codar/14_fundamentoscss/css/styles.css
+++ b/hora-de-codar/14_fundamentoscss/css/styles.css
@@ -273,3 +273,13 @@ body {
     height: 2em;
     background-color: purple;
 }
+
+html {
+    font-size: 20px;
+}
+
+.rem-1 {
+    width: 1rem;
+    height: 1rem;
+    background-color: blue;
+}
