bootstrap 5 - modulo projeto agencia - css da secao de especialidades

--- a/hora-de-codar/15_projeto_agencia/css/styles.css
+++ b/hora-de-codar/15_projeto_agencia/css/styles.css
@@ -144,3 +144,9 @@ html {
 #design-title {
     color: #73bfb8;
 }
+
+/* sobre a empresa */
+.footer-container {
+    background-image: url('../img/rodape.jpg');
+    background-position: center;
+}
