--- a/hora-de-codar/15_projeto_agencia/css/styles.css
+++ b/hora-de-codar/15_projeto_agencia/css/styles.css
@@ -246,3 +246,16 @@ footer {
     cursor: pointer;
     transition: .5s;
 }
+
+.copyright {
+    color: #222;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
