--- a/css-para-iniciantes/teoria/styles.css
+++ b/css-para-iniciantes/teoria/styles.css
@@ -18,3 +18,13 @@ p {
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/* elementos da pagina, listas */
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+p,
+h1 {
+    border-bottom: 1px solid red;
+}
