css para iniciantes - boxmodel

--- a/css-para-iniciantes/teoria/styles.css
+++ b/css-para-iniciantes/teoria/styles.css
@@ -76,3 +76,9 @@ h1 {
 .text-italico {
     font-style: italic;
 }
+
+.box-model {
+    width: 200px;
+    height: 100px;
+    border: 1px solid blue;
+}
