css para iniciantes - links

--- a/css-para-iniciantes/teoria/styles.css
+++ b/css-para-iniciantes/teoria/styles.css
@@ -105,3 +105,16 @@ h1 {
     line-height: 40px;
     letter-spacing: 8px;
 }
+
+/* links */
+.decoration {
+    text-decoration: none;
+}
+
+.visitado:visited {
+    color: orange;
+}
+
+.estilo-hover:hover {
+    background-color: aqua;
+}
