--- a/css-iniciantes/1_base/styles.css
+++ b/css-iniciantes/1_base/styles.css
@@ -13,6 +13,12 @@ h4 {
     font-size: 25px;
 }
 
+
+/*
+
+    classe = seletor mas especifico para muitos elementos
+    id = seletor especifico para um elemento
+*/
 .titulo {
     color: purple;
     font-size: 40px;
