css iniciantes - base - propriedades de texto

--- a/css-iniciantes/1_base/styles.css
+++ b/css-iniciantes/1_base/styles.css
@@ -29,7 +29,7 @@ h4 {
     color: aqua;
 }
 
-/* 4 - propridades de texto */
+/* 4 - propriedades de texto */
 .basic-text {
     font-family: Arial;
     color: #47db93;
