css iniciantes - base - box model parte 1

--- a/css-iniciantes/1_base/styles.css
+++ b/css-iniciantes/1_base/styles.css
@@ -108,3 +108,11 @@ h4 {
 .bold-link {
     font-weight: 600;
 }
+
+/* box model */
+.width-height {
+    width: 200px;
+    height: 100px;
+    border: 2px solid #123;
+    background-color: #321;
+}
